tests/fsharp/typecheck/sigs/neg105.bsl

typecheck error FS0019: This constructor is missing arguments; 2 are expected. Patterns must unpack them, e.g., 'Rect (width, height)'

neg105.fs(10,7,10,14): typecheck error FS0019: This constructor is applied to 1 argument(s) but expects 2

neg105.fs(13,7,13,15): typecheck error FS0019: This constructor is applied to 1 argument(s) but expects 2

typecheck error FS0019: This constructor is missing arguments; 2 are expected. Patterns must unpack them, e.g., 'Point (item1, item2)'

typecheck error FS0019: This constructor is missing arguments; 2 are expected. Patterns must unpack them, e.g., 'Triangle (base, height)'
